Fix Spigot version in /pl